Fixed admin button z-index. Fixed showFollowers focus

--- a/public/assets/css/account.css
+++ b/public/assets/css/account.css
@@ -149,7 +149,7 @@
   pointer-events: none;
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
-#showFollowers:focus, #showFollowing:focus {
+#showFollowers.active, #showFollowing.active {
   transform: translateY(0);
   opacity: 1;
   pointer-events: all;
