--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -531,6 +531,7 @@
   height: 50px;
   width: 50px;
   border-radius: 50%;
+  z-index: 5;
 }
 
 #adminLink > i {
